--- a/contents/8mmFilm/index.html
+++ b/contents/8mmFilm/index.html
@@ -100,7 +100,7 @@
 					<p>まず，フィルム化に際して24fpsまたは18fpsの連番画像を用意する必要がある．筆者はフリーソフト<a href="http://www.xmedia-recode.de/index.html" target="_blank">XMedia Recode</a>を用いて対象動画のフレームレート変換を行った．そして市販ソフト<a href="http://www.sourcenext.com/product/sony/vegaspro/" target="_blank">sony vegas pro</a>を用いて連番画像化を行った．</p>
                     <p>次に制作した連番画像を自作ソフトである<a href="https://github.com/gutugutu3030/super8filmMaker" target="_blank">super8filmMaker</a>によってフィルムに変換する．super8filmMakerはProcessingを用いて製作した．super8filmMakerを起動すると画面が表示されるので，連番画像をすべてドラッグアンドドロップすることで，フィルムの形状をしたpdfまたはaiファイル（フィルムデータ）を出力することができる．</p>
                     <p>次に出力されたフィルムデータをインクジェットプリンタでOHPシートに印刷する．使用したOHPシートは<a href="http://bungu.plus.co.jp/product/paper/inkjet/senyo.htm" target="_blank">プラス社のOHPシート</a>であり，使用したプリンタは<a href="http://cweb.canon.jp/e-support/faq/answer/inkjetmfp/74850-1.html" target="_blank">Canon MG7130</a>である．</p>
-                    <p>最後にレーザーカッタを用いて印刷したフィルムのカッティングを行う．カッターを用いて手動でのカッティングも可能だが，今回は効率化を求めてレーザーカッタを使用した．</p>
+                    <p>最後にレーザーカッタを用いて印刷したフィルムのカッティングを行う．カッターを用いて手動でのカッティングも可能だが，今回は効率化を求めてレーザーカッターを使用した．</p>
 				</div>
 			</div>
 		</section>
@@ -111,6 +111,7 @@
 					<p>今回，制作したフィルムは光学面積方式で音を録音したフィルムであるが，ノイズが酷くて特に高音がうまく再生ができなかった．これはプリンタの印刷精度に原因があるだけでなくフィルムにwavファイルの波形を印刷する際にも何らかのコツがあると筆者は考えている．例えば，波形データはただ大きく印刷しても音は大きくならず，逆に波形を小さくすることで音が少し大きくなる現象が確認された．また，高音が聞こえないためにイコライザで高音を限界まで大きくしたり，ダイナミックレンジを小さくするなどの波形編集を行っているが，まだうまく行っていない．そのため，今回の動画では音を合成している．<a href="https://www.youtube.com/watch?v=u9LW35ivHT8" target="_blank">一応，再生に失敗している動画も記す.</a></p>
                     <p>OHPシートを用いた8mmフィルムの作成は<a href="http://jesseengland.net/index.php?/project/inkjet-printed-film-process/" target="_blank">England</a>も行っている．彼の16mmフィルム映像を見ると，レーザー方式よりインクジェット方式のプリンタを用いた方が良いと筆者が感じたため，今回はインクジェットプリンタを使用した．また，以下に述べることはOHPシートを使用する際の常識なのかもしれないが，一応記す．OHPシートには両面印刷できるものより片面のみ印刷できるものの方が印刷が綺麗であった印象があった．同じ理由で使用するインクジェットプリンタは顔料インクより染料インクを用いたものを使用することを強く推奨する．</p>
                     <p>レーザーカッターの火力は若干低めに設定することを推奨する．なぜならば，火力が強いとパーフォレーション（穴）の部分が壊れてしまうからである．ただし，火力を低めに設定するとパーフォレーションが切り取りきれず，手動でプチプチ穴を開ける手間が発生する．（当たり前ですが，OHPシートの種類を変更したらレーザーカッターの設定も変更する必要があることをお忘れなく．）</p>
+					<p>レーザーカッターで切り抜く際に，印刷面でない裏面に，養生テープを貼り，その状態でカッティングすることで，穴をあける手間を省くことができる．養生テープを切らない程度の火力にすることでテープを剥がす際に穴の部分が養生テープに張り付いたままになる．</p>
 				</div>
 				<div class="col-sm-4">
 					<h2>結果と感想</h2>
@@ -134,11 +135,8 @@
 			</ol>
 			<h2>動画</h2>
 			<ol>
-				<li>ニコニコ（音合成）
-					<a href="http://www.nicovideo.jp/watch/sm28787820" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
-				</li>
-				<li>ニコニコ（サイレント）
-					<a href="http://www.nicovideo.jp/watch/sm28817001" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
+				<li>ニコニコ動画　マイリスト
+					<a href="http://www.nicovideo.jp/mylist/55794312" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
 				</li>
 				<li>youtube（音合成）
 					<a href="https://www.youtube.com/watch?v=TqPrpoFX_pE" target="_blank"><i class="glyphicon glyphicon-film"></i></a>
