--- a/index.html
+++ b/index.html
@@ -70,12 +70,29 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/kirbyPC/index.html">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> カービィでPC作ってみた</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<img src="contents/kirbyPC/PC.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<div class="caption">
+								<p>はじめての自作PC</p>
+								<p>どうせなのでぬいぐるみをケースにしてみたけどホコリヤバそう</p>
+								<p><small>2016/7</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div><div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/8mmFilm/index.html">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Bad Apple!! in 8mm Film</h3>
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/8mmFilm/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/8mmFilm/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>Bad Apple!! 影絵を8mm映写機で再生</p>
 								<p>再生にはOHPシートにインクジェットプリンタで印刷した自作フィルムを使用した</p>
@@ -93,7 +110,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/GPrint/thumbnail.gif" class="img-responsive img-responsive-overwrite">
+							<img src="contents/GPrint/thumbnail.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>コンソールはただ表示するだけの箱ではない</p>
 								<p>コンソールをクリックするとそれがどこの記述によるものかを解析，記述地点にジャンプ</p>
@@ -111,7 +128,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/DraggableBoard/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/DraggableBoard/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>なぞった部分にはリレーによって電気的な配線が行われ，通電するようになる</p>
 								<p>モータなどアクチュエータも動作可能</p>
@@ -129,7 +146,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/realtimeProcessing/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/realtimeProcessing/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>プログラムを書き始めるとすぐさま実行結果に反映される</p>
 								<p>Processing2のモードとして実装した</p>
@@ -147,7 +164,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/somen/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/somen/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>音ゲーとそうめんは似ている</p>
 								<p>ステップマニアという音ゲーを流しそうめん化した</p>
@@ -162,7 +179,7 @@
 							<h3 class="panel-title" style="padding-top: 1px;">画像変形ツール</h3>
 						</div>
 						<div class="panel-body">
-							<img src="contents/imageDeformer/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/imageDeformer/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>画像・動画を変形でき，kinectと連携すれば自分の動きとキャラクタを同調できる</p>
 								<p>キーフレーム法使用(既存手法の再実装)</p>
@@ -179,7 +196,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/numericKeypad/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/numericKeypad/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>内部配線を導電性インクでハック</p>
 								<p>Arduinoとつなげて自由なキー割り当てを可能にした</p>
@@ -196,7 +213,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/ProjectronMapping/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/ProjectronMapping/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>ドラッグ操作による手軽な電子工作</p>
 								<p>プロジェクションマッピングによる電子部品の擬似動作を利用した</p>
@@ -213,7 +230,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/duelDisk/thumbnail.png" class="img-responsive img-responsive-overwrite">
+							<img src="contents/duelDisk/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>某アニメの決闘盤を再現</p>
 								<p>デュエルディスクにカードを挿入するとキャラクタが召喚される(ソフトウェア担当)</p>
@@ -230,7 +247,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/Hako/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/Hako/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>箱とARキャラクタとのインタラクション</p>
 								<p>AR棒人間がキックをすると現実世界上の箱が動く</p>
@@ -247,7 +264,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/ARmodeling/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/ARmodeling/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>3Dモデリングをなぜ2次元上でやらねばらないのか</p>
 								<p>ARで3Dモデリングを可能にした</p>
@@ -264,7 +281,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/banbanjar/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/banbanjar/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>キー入力をするとキャラクタがキーボードを叩く</p>
 								<p>Java初作品(友達と共同製作)</p>
@@ -281,7 +298,7 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/battleLine/thumbnail.jpg" class="img-responsive img-responsive-overwrite">
+							<img src="contents/battleLine/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							<div class="caption">
 								<p>線と線の戦い　ぶつかると死ぬ</p>
 								<p>最後まで生き残った方が勝ち　アイテムを上手く使って生き残れ！</p>
