--- a/contents/kirbyPC/index.html
+++ b/contents/kirbyPC/index.html
@@ -121,7 +121,7 @@
 						</div>
 					</div>
 					<div class="col-sm-6">
-						<p>テーブルの上にプラスチックの塊ではなく，ぬいぐるみがあることで，女子力をアップすることができます．</p>
+						<p>テーブルの上（作業環境）にプラスチックや金属の塊ではなく，ぬいぐるみがあることで，女子力をアップすることができます．</p>
 						<p>そのままもたれかかって寝ることも可能です．枕として最適な硬さを持っています．</p>
 						<p><a href="https://sites.google.com/site/gutugutu30/quanku-guan-xinai/chumetepcwozizuoshitahua">詳しい製作過程はこちら</a></p>
 					</div>
