--- a/contents/kirbyPC/index.html
+++ b/contents/kirbyPC/index.html
@@ -93,6 +93,7 @@
 					<div class="col-sm-6">
 						<p>今回のカービィはCore i3を吸い込んだようです．</p>
 						<p>口はスピーカーではなく吸気口です．金網が貼ってあるので，原作と違って大きい物は吸い込めませんし，吸い込んだところでファンが壊れます．</p>
+						<p>熱暴走が怖いので常にファンはフル回転です．ゴォーというカービィの吸い込み音を感じることができます．</p>
 						<p>ぬいぐるみなのでまあまあ柔らかいです．しかしぬいぐるみと違って重量感と排熱によるぬくもりがあります．</p>
 					</div>
 				</div>
@@ -107,7 +108,8 @@
 					</div>
 					<div class="col-sm-6">
 						<p>背面は汚いのであまり見ないようにしましょう．</p>
-						<p>縫い付けてあるわけではなく，ゴムバンドで止めているだけなので容易に取り出しが可能です．</p>
+						<p>縫い付けてあるわけではなく，ゴムバンドで止めているだけなので中身は容易に取り出しが可能です．</p>
+						<p>設計ミスで中身がななめに突き刺さっています．</p>
 						<p>ちなみにグラボは刺すスペースありません．</p>
 					</div>
 				</div>
