リンク貼り忘れた

--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -83,6 +83,7 @@
 					<h2>概要</h2>
 					<p>3Dモデルを新規に制作する場合でも,既存のモデルを造形する場合でも,実世界のものに合わせて作成する場合が多くあり,そのサイズ合わせはデリケートな問題である.</p>
 					<p>この問題を解決するため,サイズをそのまま写しとり,それに合わせてモデル作成・修正を行い,それをその場で出力するというコンセプトを提案する．このコンセプトを実現するため,ビルドプレートにタッチディスプレイを設置した3Dプリンタのプロトタイプを制作した.</p>
+					<p>今回システムが対象とするのは，入れ物の作成とアクセサリの大きさ合わせである．</p>
 				</div>
 				<div class="col-sm-6">
 					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
@@ -104,8 +105,7 @@
 				</div>
 				<div class="col-sm-7">
 					<h2>システム</h2>
-					<p>プロトタイプシステムは，造形を行うビルドプレートの部分がディスプレイ（build display）となっており，シングルタッチ入力が可能である．ユーザはそれを用いてモデリングや移動・拡縮など，造形作業を行う．</p>
-					<p>また，プリンタ上部にはwebカメラが設置されており，ビルドプレート上に配置された実物体をキャプチャし，ディスプレイに実寸大表示することが可能である．</p>
+					<p>プロトタイプシステムは，造形を行うビルドプレートの部分がディスプレイ（build display）となっており，シングルタッチ入力が可能である．ユーザはそれを用いてモデリングや移動・拡縮など，造形作業を行う．また，プリンタ上部にはwebカメラが設置されており，ビルドプレート上に配置された実物体をキャプチャし，ディスプレイに実寸大表示することが可能である．</p>
 					<p>build displayにはwebカメラを用いてキャプチャを行い作業の準備をするためのTraceボタン，PC内の3Dモデルを読み込むLoadボタン，造形を開始するPrintボタンの3つのボタンが用意されている．</p>
 				</div>
 			</div>
@@ -115,9 +115,7 @@
 				<div class="col-sm-7">
 					<h2>モデリング</h2>
 					<p>新しくオリジナルの3Dモデルを制作するには，タッチペンを用いてbuild display上をなぞって作りたいモデルの形を描けば良い．</p>
-					<p>今回モデリングで制作できるのは入れ物である．ユーザは書き方を変えることで2種類の入れ物を設計できる．</p>
-					<p>入力ストロークの始点と終点が離れている場合は，視点と終点の間を穴とする入れ物を作成できる．（ハサミ入れ）</p>
-					<p>ストロークの始点と終点が近く，輪のようなストロークが与えられた時は，底面が空いたような3Dモデルを作成できる．（ドローンケース）</p>
+					<p>今回モデリングで制作できるのは入れ物である．ユーザは書き方を変えることで2種類の入れ物を設計できる．入力ストロークの始点と終点が離れている場合は，視点と終点の間を穴とする入れ物を作成できる（ハサミ入れ）．ストロークの始点と終点が近く，輪のようなストロークが与えられた時は，底面が空いたような3Dモデルを作成できる（ドローンケース）．</p>
 				</div>
 				<div class="col-sm-5">
 					<div class="thumbnail">
@@ -129,9 +127,8 @@
 				</div>
 				<div class="col-sm-12">
 					<h2>既存モデルの造形</h2>
-					<p>提案システムではモデリングを行えるだけでなく，既存のモデルを拡縮して出力することが可能である．</p>
-					<p>build display上のLoadボタンを押すことで，ユーザが事前に設定したPC上の特定のフォルダ内から，最新の3Dモデルを探しだす．</p>
-					<p>ユーザは表示された概形の枠を掴んで拡縮・内部を掴んで移動を行い，位置合わせと大きさ合わせを行う．</p>
+					<p>提案システムではモデリングを行えるだけでなく，既存のモデルを拡縮して出力することが可能である．build display上のLoadボタンを押すことで，ユーザが事前に設定したPC上の特定のフォルダ内から，最新の3Dモデルを探しだす．ユーザは表示された概形の枠を掴んで拡縮・内部を掴んで移動を行い，位置合わせと大きさ合わせを行う．</p>
+					<p>例えば，自分の手のコピーを取り，ダウンロードしてきた指輪のモデルをそれに合わせて拡縮することで，ぴったりの大きさの指輪を造形できる．</p>
 				</div>
 			</div>
 		</section>
