--- a/index.html
+++ b/index.html
@@ -70,6 +70,24 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/Fitter/index.html">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Fitter</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<img src="contents/Fitter/system.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<div class="caption">
+								<p>大きさ合わせはデリケートな問題</p>
+								<p>物に大きさを合わせることに特化した3Dプリンターを開発</p>
+								<p><small>2016/3~</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/kirbyPC/index.html">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> カービィでPC作ってみた</h3>
 							</a>
@@ -84,7 +102,8 @@
 
 						</div>
 					</div>
-				</div><div class="col-md-4 col-sm-6 col-sm-height">
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<a href="contents/8mmFilm/index.html">
