--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -138,6 +138,14 @@
 				<li></li>
 			</ol>
 		</section>
+		<section>
+			<h2>その他</h2>
+			<ul>
+				<li>Maker Faire Tokyo 2016に出展しました！
+					<a style="word-break: break-all;" href="http://makezine.jp/event/makers2016/meijidaigakumiyashita/" target="_blank">http://makezine.jp/event/makers2016/meijidaigakumiyashita/</a>
+				</li>
+			</ul>
+		</section>
 	</div>
 	<script src="../../js/jquery.min.js"></script>
 	<script src="../../js/bootstrap.min.js"></script>
