プリンタ名追記

--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -105,8 +105,9 @@
 				</div>
 				<div class="col-sm-7">
 					<h2>システム</h2>
-					<p>プロトタイプシステムは，造形を行うビルドプレートの部分がディスプレイ（build display）となっており，シングルタッチ入力が可能である．ユーザはそれを用いてモデリングや移動・拡縮など，造形作業を行う．また，プリンタ上部にはwebカメラが設置されており，ビルドプレート上に配置された実物体をキャプチャし，ディスプレイに実寸大表示することが可能である．</p>
+					<p>システムは，造形を行うビルドプレートの部分がディスプレイ（build display）となっており，シングルタッチ入力が可能である．ユーザはそれを用いてモデリングや移動・拡縮など，造形作業を行う．また，プリンタ上部にはwebカメラが設置されており，ビルドプレート上に配置された実物体をキャプチャし，ディスプレイに実寸大表示することが可能である．</p>
 					<p>build displayにはwebカメラを用いてキャプチャを行い作業の準備をするためのTraceボタン，PC内の3Dモデルを読み込むLoadボタン，造形を開始するPrintボタンの3つのボタンが用意されている．</p>
+					<p>なお，システムはreprap機である<a href="https://micro-factory.net/plaza/html/index.php/">Prn3D</a>を改造して作成している．</p>
 				</div>
 			</div>
 		</section>
