--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -145,6 +145,9 @@
 				<li>Maker Faire Tokyo 2016に出展しました！
 					<a style="word-break: break-all;" href="http://makezine.jp/event/makers2016/meijidaigakumiyashita/" target="_blank">http://makezine.jp/event/makers2016/meijidaigakumiyashita/</a>
 				</li>
+				<li>日刊工業新聞で紹介されました！
+					<a style="word-break: break-all;" href="https://www.nikkan.co.jp/articles/view/00400049" target="_blank">https://www.nikkan.co.jp/articles/view/00400049</a>
+				</li>
 			</ul>
 		</section>
 	</div>
