--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/Fitter/system.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/Fitter/index.html">
+								<img src="contents/Fitter/system.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>大きさ合わせはデリケートな問題</p>
 								<p>物に大きさを合わせることに特化した3Dプリンターを開発</p>
@@ -93,7 +95,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/kirbyPC/PC.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/kirbyPC/index.html">
+								<img src="contents/kirbyPC/PC.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>はじめての自作PC</p>
 								<p>どうせなのでぬいぐるみをケースにしてみたけどホコリヤバそう</p>
@@ -111,7 +115,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/8mmFilm/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/8mmFilm/index.html">
+								<img src="contents/8mmFilm/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>Bad Apple!! 影絵を8mm映写機で再生</p>
 								<p>再生にはOHPシートにインクジェットプリンタで印刷した自作フィルムを使用した</p>
@@ -129,7 +135,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/GPrint/thumbnail.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="https://github.com/gutugutu3030/gprintMode" target="_blank">
+								<img src="contents/GPrint/thumbnail.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>コンソールはただ表示するだけの箱ではない</p>
 								<p>コンソールをクリックするとそれがどこの記述によるものかを解析，記述地点にジャンプ</p>
@@ -147,7 +155,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/DraggableBoard/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/DraggableBoard/index.html">
+								<img src="contents/DraggableBoard/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>なぞった部分にはリレーによって電気的な配線が行われ，通電するようになる</p>
 								<p>モータなどアクチュエータも動作可能</p>
@@ -165,7 +175,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/realtimeProcessing/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/realtimeProcessing/index.html">
+								<img src="contents/realtimeProcessing/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>プログラムを書き始めるとすぐさま実行結果に反映される</p>
 								<p>Processing2のモードとして実装した</p>
@@ -183,7 +195,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/somen/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/somen/index.html">
+								<img src="contents/somen/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>音ゲーとそうめんは似ている</p>
 								<p>ステップマニアという音ゲーを流しそうめん化した</p>
@@ -215,7 +229,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/numericKeypad/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="https://sites.google.com/site/gutugutu30/other/tenkiwojietishitegaizaosuru" target="_blank">
+								<img src="contents/numericKeypad/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>内部配線を導電性インクでハック</p>
 								<p>Arduinoとつなげて自由なキー割り当てを可能にした</p>
@@ -232,7 +248,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/ProjectronMapping/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/ProjectronMapping/index.html">
+								<img src="contents/ProjectronMapping/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>ドラッグ操作による手軽な電子工作</p>
 								<p>プロジェクションマッピングによる電子部品の擬似動作を利用した</p>
@@ -249,7 +267,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/duelDisk/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="contents/duelDisk/index.html">
+								<img src="contents/duelDisk/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>某アニメの決闘盤を再現</p>
 								<p>デュエルディスクにカードを挿入するとキャラクタが召喚される(ソフトウェア担当)</p>
@@ -266,7 +286,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/Hako/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="https://www.youtube.com/watch?v=ZBfd_9pjG98" target="_blank">
+								<img src="contents/Hako/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>箱とARキャラクタとのインタラクション</p>
 								<p>AR棒人間がキックをすると現実世界上の箱が動く</p>
@@ -283,7 +305,9 @@
 							</a>
 						</div>
 						<div class="panel-body">
-							<img src="contents/ARmodeling/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							<a href="https://www.youtube.com/watch?v=pb9ExH-FXCY" target="_blank">
+								<img src="contents/ARmodeling/thumbnail.jpg" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
 							<div class="caption">
 								<p>3Dモデリングをなぜ2次元上でやらねばらないのか</p>
 								<p>ARで3Dモデリングを可能にした</p>
