--- a/index.html
+++ b/index.html
@@ -70,6 +70,26 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/Gilgamesh/index.html">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> やさしいギルガメッシュ</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="contents/Gilgamesh/index.html">
+								<img src="contents/Gilgamesh/image.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>剣で剣を捌くのは男のロマン</p>
+								<p>ゲート・オブ・バビロンを自作　慢心王を倒せ</p>
+								<p><small>2016/9</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/Fitter/index.html">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> Fitter</h3>
 							</a>
