--- a/contents/Gilgamesh/index.html
+++ b/contents/Gilgamesh/index.html
@@ -67,7 +67,7 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>やさしいギルガメッシュ <small>ギルガメッシュと戦いたかった話</small></h1>
+			<h1>やさしいギルガメッシュ <small>ゲート・オブ・バビロンを自作した話</small></h1>
 		</section>
 		<section>
 			<img src="thumbnail.gif" class="img-responsive img-responsive-overwrite">
