--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-		$(document).ready(function () {
+		$(document).load(function () {
  		   $('.grid img').equalHeight();
 		});
 		</script>
