--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
 		<script type="text/javascript">
 		$(document).load(function () {
  		   $('.grid img').equalHeight();
+			Console.log("はあ");
 		});
 		</script>
 </body>
