--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-		$(document).load(function () {
+		$(window).load(function () {
  		   $('.grid img').equalHeight();
 			Console.log("はあ");
 		});
