--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
 		</div>
 	</header>
 	<div class="container">
+		<div>
+			<p>制作物一覧です．動画一覧は<a href="https://www.youtube.com/playlist?list=PLQyFKRbKsHDv9lAgn7kHZCq7V1gATlHlU" target="_Blank">こちら</a>．制作したライブラリ一覧は<a href="library.html">こちら</a>．</p>
+		</div>
 
 		<div class="row">
 			<div class="row-height grid">
