--- a/contents/pintaraction/index.html
+++ b/contents/pintaraction/index.html
@@ -67,19 +67,19 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>pintaraction <small>プロジェクションマッピングによる電子工作体験支援</small></h1>
+			<h1>pintaraction <small>フィジカルコンピューティングにおけるピンの抜き挿しによるインタラクション</small></h1>
 		</section>
 		<section>
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>概要</h2>
-					<p>筆者らはこれまで初学者のための電子工作体験支援の環境である<a href="../ProjectronMapping/index.html">Projectron Mapping</a>を提案している．</p>
-					<p>ドラッグ操作による電子工作が好評であったが，動作をプロジェクションマッピングで提示しているため，動かせる部品に限りがあった．</p>
-					<p>そこで，ドラッグ操作で実際に電気の流れる配線を作れる基板を提案する．</p>
+					<p>素子の抜き挿しは回路作成には必ず行う行為であり，センシングすれば様々なインタラクションが可能になるだろう．</p>
+					<p>そこで素子の抜き挿しをユーザ支援に有効活用する手法を提案する．</p>
+					<p>今回は，回路・プログラムを作成開始，修正，そしてパラメータの決定という3つのステップに対し，抜き挿しによってユーザ支援を行った．</p>
 				</div>
 				<div class="col-sm-6">
 					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1CRq5bLOMLU" frameborder="0" allowfullscreen></iframe>
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KxpW07cH5cA" frameborder="0" allowfullscreen></iframe>
 						frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
@@ -87,9 +87,23 @@
 		</section>
 		<section>
 			<div class="row">
+				<div class="col-sm-12">
+					<h2>抜き差しという行為</h2>
+					<p>人の行動には何らかの理由があるが，それは物を抜き挿しする行為でも同じことがいえる．例えば，人がコンセントに挿すのはその時その機器を使いたいからである．イヤホンをパソコンに挿すのはその時音楽を聞きたいからである．</p>
+					<p>同じようなことがマイコンのピンに対してもいえる．例えば，ユーザがマイコンの10番ピンに対してLEDを挿せば，そのユーザはおそらく10番ピンを使用したいのだろう．今のプログラミングではその後で「10番ピンを使う」という宣言をする必要がある．しかしユーザにとっては10番ピンに素子を挿した時点で「10番ピンを使う」と宣言したにも等しく，これは二度手間となってしまう．</p>
+					<p>本稿では，抜き挿しをセンシングすることでそこから人間のやりたいことを推測するという，シンプルだが強力なアイデアによって解決を行う．</p>
+					<p>今回，ユーザの「ピンに挿す」という行為を「通電させる」という行動の理由だと捉える．そして「ピンから抜く」という行為を「通電しない」という行動の理由だと捉える．これにより抜き挿しをオン・オフに対応付けることが可能になり，例示プログラミングのような提示が可能になる．</p>
+					<p>この抜き差しという行為をうまく使っている物もある．例えば，イヤホンがプラグから抜かれる理由はいくつか考えられる．音楽を聞くのをやめたのかもしれないし，誤って抜けてしまったのかもしれない．イヤホンでなくスピーカに切り替えたいのかもしれない．それらに対応するため，ある機器では音楽再生中にイヤホンが抜かれたら一時停止する処理をしている．
+						この，ユーザの行動に対して尤もらしい挙動をすることが本稿の目的である．
+					</p>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="row">
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="system.jpg">
+						<img src="system.png">
 						<div class="caption">
 							<p>システム</p>
 						</div>
@@ -97,17 +111,47 @@
 				</div>
 				<div class="col-sm-7">
 					<h2>システム</h2>
-					<p>提案システムはユニバーサル基板を模した形をしており，ドラッグ操作による結線・断線機能を持つ．今回は専用のペンを用いてユニバーサル基板上をなぞり，それを導線として使用する設計とした．システムはリレーを用いて電気的な配線を行う．</p>
-					<p>提案システムをPC上のアプリケーションと接続することで，回路作成支援を付加することが可能になる．例えば，ユーザがショートの起こる配線を行った際，配線を行う代わりに爆発アニメーションを提示しショートを回避する機能を持つ．接続中，ユーザはシステム上だけでなくPC 上でも回路を製作できる．基板の上部にプロジェクタを設置し，ユーザの行った配線を重畳表示する．</p>
+					<p>システムはピンの抜き挿しを識別するためのインタフェースと，マイコンの挙動をブロックによってプログラミングするビジュアルプログラミング言語からなっている．プログラミングにはテキストベースのプログラミング言語ではなく，ビジュアルプログラミング言語を使用する．これは，ピンに対してインタラクションした際の反映結果が，プログラムが視覚化されていることよりわかりやすいためである．</p>
+					<p>ビジュアルプログラミング環境のブロックには，入力と出力のコネクタがあり，入力（赤）は左端から，出力（青）は右端に統一されている．出力コネクタを他のブロックの入力コネクタにドラッグすることで，接続を行うことができる．現在使用できるのはボタンブロックと論理演算ブロック，そしてArduino ピンブロックである．ボタンブロックと論理演算ブロックは，画面左端のメニューからドラッグして好きな位置に配置可能である．ボタンブロックにはオン（5V）とオフ（0V）をクリックで切り替えることができる．論理演算ブロックは入力コネクタが2つ付いており，それらの論理演算の結果を出力コネクタに流す．例えばNOTオブジェクトは入力がオン（5V）の時にオフ（0V）を出力し，入力がオフ（0V）の時にオン（5V）を出力する．</p>
 				</div>
 			</div>
 		</section>
-			<h2>参考文献</h2>
-			<ol>
-				<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), pp.183-184, 2015.
-					<a href="http://www.wiss.org/WISS2015Proceedings/demo/2-S02.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
-				</li>
-			</ol>
+		<section>
+			<div class="row">
+				<div class="col-sm-12">
+					<h2>回路制作支援</h2>
+					<p>電子工作は基本的にはトライアンドエラーの繰り返しである．まず回路・プログラムを作成する．そしてミスがあるなら回路・プログラムを修正する．また，電子工作において難しいとされているのが詳細なパラメータの決定である[1]．それぞれについて支援するため，以下の3つの機能を実装した．</p>
+					<h4>ピンへの挿入によるブロック自動作成</h4>
+					<p>これは，回路・プログラムを最初に作成する際の支援機能である．Arduinoのピンに対応するピンブロックは，抜き挿しインタフェースを操作することにより,プログラミング画面に自動的に配置される．例えば，抜き挿しインタフェースの1番右の穴に素子を挿入すると，1番右の穴に対応するブロックを自動的に生成する．これによってピン番号の概念を使用せずにピンの指定を行える．</p>
+					<h4>ピンの抜き挿しによるブロック間対応関係の修正</h4>
+					<p>これは，回路・プログラムを修正する際の支援機能である．ユーザはピンの抜き挿しを通して入力と出力の関係をシステムに教えこむことが可能である．例えば，ピンへの入力がオンの時に素子を抜き，ピンへの入力がオフの時にLEDを挿す，という行為を繰り返す．するとシステムはユーザが「オン（5V）の時はLEDを消して（0V），オフ（0V）の時はLEDを点けたい（5V）」のだと解釈して，自動で信号を反転させるNOTオブジェクトを挿入する．つまり既に入力に接続されているピンに対して抜き挿し例示をすると，入力信号との関係を検出し直し，システムが自動で論理演算ブロックを挟む．</p>
+					<h4>ピンの抜き挿しによるオン・オフ周期の提示</h4>
+					<p>これは，回路・プログラムのパラメータを設定する際の支援機能である．ユーザはピンの抜き挿しを周期的に繰り返すことで全く同じ周期をシステムに覚えさせることができる．例えば，ピンにLEDの抜き挿しを繰り返すことで，ユーザの抜き挿しのリズムをシステムが真似てLEDを点滅させる．厳密にはこれは例示機能ではないが，ここでは「抜き挿しによる例示」という表現を使う．この機能はビジュアルプログラミング言語上の右上のボタン（Recordボタン）で機能の有効・無効を切り替えることが可能である．</p>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="row">
+				<div class="col-sm-6">
+					<h2>製作例</h2>
+					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sYAfmdxjHkc" frameborder="0" allowfullscreen></iframe>
+						frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<h2>ABPro2015での発表</h2>
+					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jKALSRdZyR0" frameborder="0" allowfullscreen></iframe>
+						frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</div>
+		</section>
+		<h2>参考文献</h2>
+		<ol>
+			<li>Hartmann, B., Abdulla, L. et al. Authoring sensor-based interactions by demonstration with direct manipulation and pattern recognition.  In Proc. of CHI '07, pp.145-154, 2007.</li>
+		</ol>
 		</section>
 	</div>
 	<script src="../../js/jquery.min.js"></script>
