--- a/contents/pintaraction/index.html
+++ b/contents/pintaraction/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030 - pinrataction</title>
+	<title>gutugutu3030 - pinteraction</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -67,7 +67,7 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>pintaraction <small>フィジカルコンピューティングにおけるピンの抜き挿しによるインタラクション</small></h1>
+			<h1>pinteraction <small>フィジカルコンピューティングにおけるピンの抜き挿しによるインタラクション</small></h1>
 		</section>
 		<section>
 			<div class="row">
