--- a/index.html
+++ b/index.html
@@ -176,6 +176,27 @@
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
+							<a href="contents/pinteraction/index.html">
+								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> pinteraction</h3>
+							</a>
+						</div>
+						<div class="panel-body">
+							<a href="contents/pinteraction/index.html">
+								<img src="contents/pinteraction/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
+							</a>
+							<div class="caption">
+								<p>電子工作を行い際に必ず電子部品の抜き差しをするはず</p>
+								<p>抜き差しをプログラミングに有効活用</p>
+								<p><small>2016/9</small></p>
+							</div>
+
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-md-4 col-sm-6 col-sm-height">
+					<div class="panel panel-info">
+						<div class="panel-heading">
 							<a href="contents/DraggableBoard/index.html">
 								<h3 class="panel-title panelHeader"><span class="glyphicon glyphicon-link" aria-hidden="true"></span> ドラッグで配線できる基板</h3>
 							</a>
@@ -232,6 +253,7 @@
 						</div>
 					</div>
 				</div>
+				<style>/*
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
@@ -247,6 +269,7 @@
 						</div>
 					</div>
 				</div>
+				*/</style>
 				<div class="col-md-4 col-sm-6 col-sm-height">
 					<div class="panel panel-info">
 						<div class="panel-heading">
