--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 							<div class="caption">
 								<p>電子工作を行い際に必ず電子部品の抜き差しをするはず</p>
 								<p>抜き差しをプログラミングに有効活用</p>
-								<p><small>2016/9</small></p>
+								<p><small>2015/9~2016/3</small></p>
 							</div>
 
 						</div>
