--- a/contents/pinteraction/index.html
+++ b/contents/pinteraction/index.html
@@ -112,7 +112,8 @@
 				<div class="col-sm-7">
 					<h2>システム</h2>
 					<p>システムはピンの抜き挿しを識別するためのインタフェースと，マイコンの挙動をブロックによってプログラミングするビジュアルプログラミング言語からなっている．プログラミングにはテキストベースのプログラミング言語ではなく，ビジュアルプログラミング言語を使用する．これは，ピンに対してインタラクションした際の反映結果が，プログラムが視覚化されていることよりわかりやすいためである．</p>
-					<p>ビジュアルプログラミング環境のブロックには，入力と出力のコネクタがあり，入力（赤）は左端から，出力（青）は右端に統一されている．出力コネクタを他のブロックの入力コネクタにドラッグすることで，接続を行うことができる．現在使用できるのはボタンブロックと論理演算ブロック，そしてArduino ピンブロックである．ボタンブロックと論理演算ブロックは，画面左端のメニューからドラッグして好きな位置に配置可能である．ボタンブロックにはオン（5V）とオフ（0V）をクリックで切り替えることができる．論理演算ブロックは入力コネクタが2つ付いており，それらの論理演算の結果を出力コネクタに流す．例えばNOTオブジェクトは入力がオン（5V）の時にオフ（0V）を出力し，入力がオフ（0V）の時にオン（5V）を出力する．</p>
+					<p>ビジュアルプログラミング環境のブロックには，入力と出力のコネクタがあり，入力（赤）は左端から，出力（青）は右端に統一されている．出力コネクタを他のブロックの入力コネクタにドラッグすることで，接続を行うことができる．現在使用できるのはボタンブロックと論理演算ブロック，そしてArduino
+						ピンブロックである．ボタンブロックと論理演算ブロックは，画面左端のメニューからドラッグして好きな位置に配置可能である．ボタンブロックにはオン（5V）とオフ（0V）をクリックで切り替えることができる．論理演算ブロックは入力コネクタが2つ付いており，それらの論理演算の結果を出力コネクタに流す．例えばNOTオブジェクトは入力がオン（5V）の時にオフ（0V）を出力し，入力がオフ（0V）の時にオン（5V）を出力する．</p>
 				</div>
 			</div>
 		</section>
@@ -148,9 +149,20 @@
 				</div>
 			</div>
 		</section>
+		<section>
+			<div class="row">
+				<div class="col-sm-12">
+					<h2>研究に出来なかった理由</h2>
+					<p>単に抜き挿しだけでは新規性が得られなかった，他のインタラクションでは有用性が得られなさそうだった，という理由がまずひとつ．</p>
+					<p>そして「なぜモジュール化されたものではなく素子単体を使うのか」に答えられなかったからです．電子回路自動認識ってやっぱむずくて電気流して得られる情報だけでは素子の特定とか難しい．かと言って素子にマーカー貼るのはめんどくさく，それだったらモジュール化したもので良いのでは，となる．「素子だけで行いたい」ってニーズがどの層にあるかってむずいよなあ，となって思考停止しました．（素子が挿されているかどうかを認識することは行われていたり[2]）</p>
+				</div>
+			</div>
+		</section>
 		<h2>参考文献</h2>
 		<ol>
-			<li>Hartmann, B., Abdulla, L. et al. Authoring sensor-based interactions by demonstration with direct manipulation and pattern recognition.  In Proc. of CHI '07, pp.145-154, 2007.</li>
+			<li>Hartmann, B., Abdulla, L. et al. Authoring sensor-based interactions by demonstration with direct manipulation and pattern
+				recognition. In Proc. of CHI '07, pp.145-154, 2007.</li>
+			<li>Drew, D., Newcomb, L. J. et al. The Toastboard: Ubiquitous Instrumentation and Automated Checking of Breadboarded Circuits. In Proc. of UIST '16, 2016.</li>
 		</ol>
 		</section>
 	</div>
