--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -148,6 +148,9 @@
 				<li>日刊工業新聞で紹介されました！
 					<a style="word-break: break-all;" href="https://www.nikkan.co.jp/articles/view/00400049" target="_blank">https://www.nikkan.co.jp/articles/view/00400049</a>
 				</li>
+				<li>WBSのトレたまで紹介されました！（10/3）
+					<a style="word-break: break-all;" href="http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/" target="_blank">http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/</a>
+				</li>
 			</ul>
 		</section>
 	</div>
