--- a/profile.html
+++ b/profile.html
@@ -130,7 +130,7 @@
 						</li>
 					</ol>
 				</li>
-				<li>メディア報道（新聞・テレビ・展示）
+				<li>メディア報道（新聞・テレビ）
 					<ol>
 						<li>「【トレたま】コピー機感覚の３Ｄプリンター」, テレビ東京 WBS「トレンドたまご」取材, (2016年10月3日放送).
 							<a href="http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
@@ -138,6 +138,10 @@
 						<li>「コピー感覚で立体造形−明治大、３年以内に新３Ｄプリンター実用化」, 日刊工業新聞記事掲載, (2016年9月16日付).
 							<a href="https://www.nikkan.co.jp/articles/view/00400049" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 						</li>
+					</ol>
+				</li>
+				<li>展示
+					<ol>
 						<li>Fitter：実寸に合ったものを得るシステム, Maker Faire Tokyo 2016, 明治大学宮下研究室出展, (2016年8月6-7日).
 							<a href="http://makezine.jp/event/makers2016/meijidaigakumiyashita/" target="_blank"><i class="glyphicon glyphicon-link"></i></a>
 						</li>
