--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -154,6 +154,9 @@
 				<li>WBSのトレたまで紹介されました！（10/3）
 					<a style="word-break: break-all;" href="http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/" target="_blank">http://www.tv-tokyo.co.jp/mv/wbs/trend_tamago/post_119100/</a>
 				</li>
+				<li>明治大学からのプレスリリースがでました！
+					<a style="word-break: break-all;" href="http://www.meiji.ac.jp/koho/press/2016/6t5h7p00000m2z6v.html" target="_blank">http://www.meiji.ac.jp/koho/press/2016/6t5h7p00000m2z6v.html</a>
+				</li>
 			</ul>
 		</section>
 	</div>
