--- a/contents/ProjectronMapping/index.html
+++ b/contents/ProjectronMapping/index.html
@@ -129,7 +129,7 @@
 			</div>
 		</section>
 		<section>
-			<h2>参考文献</h2>
+			<h2>書誌情報</h2>
 			<ol>
 				<li>秋山耀, 宮下芳明. 部品へのプロジェクションマッピングによる通電しない電子工作. 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2013), pp.141-142, 2013.
 					<a href="http://www.wiss.org/WISS2013Proceedings/demo/089.pdf" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
