--- a/profile.html
+++ b/profile.html
@@ -113,6 +113,10 @@
 							<a href="http://dl.acm.org/citation.cfm?id=2658779.2659113&coll=DL&dl=ACM" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 							<strong class="text-info">(SUI2014で招待デモ発表)</strong>
 						</li>
+						<li>Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real Objects. 
+							Proceedings of the adjunct publication of the 29th annual ACM symposium
+							on User interface software and technology(UIST2016), pp.129-131, 2016.(to appear)
+						</li>
 					</ol>
 				</li>
 				<li>デモ・ポスター発表
