--- a/profile.html
+++ b/profile.html
@@ -76,7 +76,7 @@
 			<div class="col-sm-8">
 				<h2>秋山 耀 <small>Yoh Akiyama</small></h2>
 				<ul style="list-style-type:none;">
-					<li>明治大学院理工学研究科新領域創造専攻1年</li>
+					<li>明治大学大学院理工学研究科新領域創造専攻1年</li>
 					<li>学部生時代<a href="http://www.th.cs.meiji.ac.jp/">玉木研究室</a>所属</li>
 					<li><a href="http://miyashita.com/">宮下研究室</a>所属</li>
 					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
