--- a/contents/Gilgamesh/index.html
+++ b/contents/Gilgamesh/index.html
@@ -137,6 +137,14 @@
 			</div>
 		</section>
 		<section>
+			<h2>その他</h2>
+			<ul>
+				<li>デイリーポータルＺで紹介されました！
+					<a style="word-break: break-all;" href="http://portal.nifty.com/kiji/161019197846_2.htm" target="_blank">http://portal.nifty.com/kiji/161019197846_2.htm</a>
+				</li>
+			</ul>
+		</section>
+		<section>
 			<p>技術指導：いわたせんぱい</p>
 			<p>撮影協力：まつおくん</p>
 		</section>
