--- a/contents/somen/index.html
+++ b/contents/somen/index.html
@@ -91,7 +91,7 @@
 			<h2>その他</h2>
 			<ul>
 				<li>デイリーポータルＺで紹介されました！
-					<a style="word-break: break-all;" href="http://portal.nifty.com/kiji/140924165234_1.htm" target="_blank">https://www.nikkan.co.jp/articles/view/00400049</a>
+					<a style="word-break: break-all;" href="http://portal.nifty.com/kiji/140924165234_1.htm" target="_blank">http://portal.nifty.com/kiji/140924165234_1.htm</a>
 				</li>
 			</ul>
 		</section>
