--- a/profile.html
+++ b/profile.html
@@ -115,7 +115,8 @@
 						</li>
 						<li>Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real Objects. 
 							Proceedings of the adjunct publication of the 29th annual ACM symposium
-							on User interface software and technology(UIST2016), pp.129-131, 2016.(to appear)
+							on User interface software and technology(UIST2016), pp.129-131, 2016.
+							<a href="http://dl.acm.org/citation.cfm?id=2658779.2659113&coll=DL&dl=ACM" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 						</li>
 					</ol>
 				</li>
