--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
 							</ul>
 						</li>
 
-						<li><a href="profile.html">Profile</a></li>
+						
+						<li class="dropdown">
+							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="profile.html">日本語</a></li>
+								<li><a href="profileEng.html">English</a></li>
+							</ul>
+						</li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
 						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
 
