--- a/profile.html
+++ b/profile.html
@@ -55,11 +55,15 @@
 								<li><a href="library.html">Libraries</a></li>
 							</ul>
 						</li>
-
-						<li class="active"><a href="profile.html">Profile</a></li>
+						<li class="dropdown active">
+							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
+							<ul class="dropdown-menu" role="menu">
+								<li><a href="profile.html">日本語</a></li>
+								<li><a href="profileEng.html">English</a></li>
+							</ul>
+						</li>
 						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
 						<li><a href="https://sites.google.com/site/gutugutu30/">備忘録</a></li>
-
 					</ul>
 				</div>
 			</div>
@@ -116,7 +120,7 @@
 						<li>Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real Objects. 
 							Proceedings of the adjunct publication of the 29th annual ACM symposium
 							on User interface software and technology(UIST2016), pp.129-131, 2016.
-							<a href="http://dl.acm.org/citation.cfm?id=2658779.2659113&coll=DL&dl=ACM" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+							<a href="http://dl.acm.org/citation.cfm?id=2985730&CFID=853513149&CFTOKEN=66983434" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
 						</li>
 					</ol>
 				</li>
