--- a/profileEng.html
+++ b/profileEng.html
@@ -61,10 +61,10 @@
 			<h1>Profile</h1>
 		</div>
 		<div class="row">
-			<div class="col-sm-4">
-				<img class="img-rounded img-responsive" src="icon.svg" />
+			<div class="col-sm-3">
+				<img class="img-rounded img-responsive" src="https://i.gyazo.com/3a4f921a49399b6802f3cd4e5282b957.png" />
 			</div>
-			<div class="col-sm-8">
+			<div class="col-sm-9">
 				<h2>Yoh Akiyama <small>秋山 耀</small></h2>
 				<ul style="list-style-type:none;">
 					<li>Meiji University Master's 1 Year</li>
