--- a/profileEng.html
+++ b/profileEng.html
@@ -72,8 +72,7 @@
 					<li><i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
 				</ul>
 				<ul style="list-style-type:none;">
-					<li>趣味：電子工作, Programing, 8mm film projector</li>
-					<li>Intarests：HCI, TUI，Personal Fabrication，電子工作支援，プログラミング支援</li>
+					<li>Research interests：HCI, TUI，Personal Fabrication，Electronic Modeling Support</li>
 				</ul>
 			</div>
 		</div>
