--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -142,7 +142,11 @@
 		<section>
 			<h2>書誌情報</h2>
 			<ol>
-				<li></li>
+				<li>Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real Objects. Proceedings of the
+					adjunct publication of the 29th annual ACM symposium on User interface software and technology(UIST2016), pp.129-131,
+					2016.
+					<a href="http://dl.acm.org/citation.cfm?id=2985730&CFID=853513149&CFTOKEN=66983434" target="_blank"><i class="fa fa-file-pdf-o"></i></a>
+				</li>
 			</ol>
 		</section>
 		<section>
