--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						</div>
 						<div class="panel-body">
 							<a href="https://github.com/gutugutu3030/gprintMode" target="_blank">
-								<img src="contents/GPrint/thumbnail.gif" class="img-responsive img-responsive-overwrite" width="640" height="480">
+								<img src="contents/GPrint/thumbnail.png" class="img-responsive img-responsive-overwrite" width="640" height="480">
 							</a>
 							<div class="caption">
 								<p>コンソールはただ表示するだけの箱ではない</p>
