--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -168,6 +168,8 @@
 				<li>明治大学からのプレスリリースがでました！
 					<a style="word-break: break-all;" href="http://www.meiji.ac.jp/koho/press/2016/6t5h7p00000m2z6v.html" target="_blank">http://www.meiji.ac.jp/koho/press/2016/6t5h7p00000m2z6v.html</a>
 				</li>
+				<li>日経産業新聞で紹介されました！
+				</li>
 			</ul>
 		</section>
 	</div>
