--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -95,7 +95,7 @@
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="system.png">
+						<img src="thumbnail.jpg">
 						<div class="caption">
 							<p>二面図モデリング</p>
 						</div>
@@ -103,9 +103,9 @@
 				</div>
 				<div class="col-sm-7">
 					<h2>二面図モデリング</h2>
-					<p>システムは，造形を行うビルドプレートの部分がディスプレイ（build display）となっており，シングルタッチ入力が可能である．ユーザはそれを用いてモデリングや移動・拡縮など，造形作業を行う．また，プリンタ上部にはwebカメラが設置されており，ビルドプレート上に配置された実物体をキャプチャし，ディスプレイに実寸大表示することが可能である．</p>
-					<p>build displayにはwebカメラを用いてキャプチャを行い作業の準備をするためのTraceボタン，PC内の3Dモデルを読み込むLoadボタン，造形を開始するPrintボタンの3つのボタンが用意されている．</p>
-					<p>なお，システムはreprap機である<a href="https://micro-factory.net/plaza/html/index.php/">Prn3D</a>を改造して作成している．</p>
+					<p>今回，誰でも行ったことがある「紙に図形を描く」という動作に注目した．そしてその中で一般的な方法である，上から見た図や横から見た図を描きとる方法を用いた．</p>
+					<p>システムで使用する専用紙には5mm間隔の方眼が書いてある枠が2つある．水性マーカを用いて，上に正面図を描き，下に上面図を描く．描いた大きさと同じ大きさの造形物を得ることができる．そのため，図面に物を置いて大きさ合わせすることが可能である．縦11cm横15cm高さ15cmまでの物を設計できる．</p>
+					<p>ユーザは1つのパーツごとに色分けを行う必要がある．また，同じ色は2回以上使用不可とした．これはシステム側に正面図と上面図のパーツの対応関係を示す必要があるためである．また，くり抜く部分（差集合をとる部分）は塗りつぶす必要がある．</p>
 				</div>
 			</div>
 		</section>
@@ -113,8 +113,9 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>ワークショップと作例</h2>
-					<p>新しくオリジナルの3Dモデルを制作するには，タッチペンを用いてbuild display上をなぞって作りたいモデルの形を描けば良い．</p>
-					<p>今回モデリングで制作できるのは入れ物である．ユーザは書き方を変えることで2種類の入れ物を設計できる．入力ストロークの始点と終点が離れている場合は，視点と終点の間を穴とする入れ物を作成できる（ハサミ入れ）．ストロークの始点と終点が近く，輪のようなストロークが与えられた時は，底面が空いたような3Dモデルを作成できる（ドローンケース）．</p>
+					<p>9～81歳の男女7名にワークショップを行い，いくつか図面の設計をしてもらった．なお，造形に時間がかかるため，ワークショップ中は図面を描くことのみを行い，後日3Dプリントしたものを渡した．</p>
+					<p>筆者らがサポートを行いながら小学3年生と5年生の男女2人に図面を描いてもらったところ，うさぎのおもちゃ，3つの入れ物，ゲームキャラクタを模した物，そしてコップの6つを設計することができた．このうち2つの造形に成功している．2つは図面の書き損じ，もう2つはシステムの画像認識の失敗によって造形に失敗している．</p>
+					<p>70代，80代の参加者はそれぞれ家の長押（なげし）の大きさに合ったS字フックとブックエンドを設計した．それぞれ造形に成功している．</p>
 				</div>
 				<div class="col-sm-6">
 					<div class="thumbnail">
